Update JavaGold17.md